@@ -6,6 +6,9 @@
 
 * String attributes in HDF5 files can now be empty strings (using H5S_NULL).
 
+* Allow HARP to import HDF5 files that are generated by the netCDF4 library
+  (allow numeric attributes to be 1-element arrays instead of scalars).
+
 * Fixed mapping description of GOME2 L1 product ingestion.
 
 1.1 2017-11-06
